--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "5.4.*",
-        "yajra/laravel-datatables-oracle": "^7.0"
+        "yajra/laravel-datatables-oracle": "^7.0",
+        "lukepolo/laracart": "1.3.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
